@@ -43,23 +43,91 @@
 			<artifactId>compile-testing</artifactId>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<!--
-					-proc:none turns off annotation processors so that the
-					AndHowCompileProcessor does not attempt to process the
-					AndHow module itself.
-					-->
-					<compilerArgument>
-						-proc:none
-					</compilerArgument>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+
+	<profiles>
+		<profile>
+			<id>DisableAnnotationProcOnJDK8</id>
+			<activation>
+				<jdk>[1.8,1.9)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<source>1.8</source>
+							<target>1.8</target>
+							<compilerArgs>
+								<!--
+								proc:none turns off annotation processors so AndHowCompileProcessor
+								does not attempt to process itself.
+								-->
+								<arg>-proc:none</arg>
+							</compilerArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>SomeJDK8s</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+				<file>
+					<exists>${java.home}/../lib/tools.jar</exists>
+				</file>
+				<jdk>[1.8,1.9)</jdk>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>com.sun</groupId>
+					<artifactId>tools</artifactId>
+					<version>1.8</version>
+					<scope>system</scope>
+					<systemPath>${java.home}/../lib/tools.jar</systemPath>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>java9AndBeyond</id>
+			<!--
+			Its not possible to build a JRE 1.8 compatible jar file using JDK9+ bc of the need to
+			use the '-add-modules' feature of JDK9. When '-add-modules' is used, javac refuses to
+			compile to a version earlier than 1.9.  Thus, until 1.8 support is dumped by AndHow,
+			distributed releases and snapshots need to be done w/ JDK 1.8.
+			-->
+			<activation>
+				<jdk>[1.9,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<compilerArgs>
+								<!--
+								Include the compile libs (tools.jar) for the annotation
+								processor to compile against.
+								 -->
+								<arg>--add-modules=jdk.compiler</arg>
+								<!--
+								proc:none turns off annotation processors so AndHowCompileProcessor
+								does not attempt to process itself.
+								-->
+								<arg>-proc:none</arg>
+							</compilerArgs>
+							<!-- without forking compilation happens in the
+							same process, so no arguments are applied -->
+							<fork>true</fork>
+							<source>1.9</source>
+							<target>1.9</target>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
